feat: crud de pessoas e aeronautas
