# src/main/kotlin/br/gov/ma/ctamanagerservice/adapters/api/controllers/AeronautaGateway.kt
@@ -1,0 +1,9 @@
+package br.gov.ma.ctamanagerservice.adapters.api.controllers
+
+import br.gov.ma.ctamanagerservice.domain.entities.Aeronauta
+
+interface AeronautaGateway {
+    fun encontrarTudo(): List<Aeronauta>
+    fun encontrarPorId(id: Long): Aeronauta?
+    fun salvar(aeronave: Aeronauta): Aeronauta
+}
