# src/main/kotlin/br/gov/ma/ctamanagerservice/domain/entities/Aeronauta.kt
@@ -1,7 +1,7 @@
 package br.gov.ma.ctamanagerservice.domain.entities
 
-data class Pessoa(
+data class Aeronauta(
     val id: Long,
-    val nome: String,
-    val cpf: String
+    val pessoa: Pessoa,
+    val codigoAnac: Int
 )
